--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,26 +1,30 @@
 <% layout('layouts/plate')%>
-<div class="container-md col-6">
-    <div class="card ">
-        <div class="card-body shadow-lg p-3 bg-body-tertiary rounded">
-                <h6 class="text-end"> <a href="/register">Register</a></h6>
-                <h1 class="card-title mx-3 mb-3">Log in</h1>
-                <form action="/login" method="POST" class="validated-form" novalidate>
-                    <div class="mx-3 mb-3">
-                        <label for="username" class="form-label"> Username </label>
-                        <input type="text" name="username" id="username" class="form-control" required>
-                        <div class="valid-feedback">
-                            Looks Good!
+<div class="container-md">
+    <div class="row justify-content-center">
+        <div class="col-lg-6">
+            <div class="card">
+                <div class="card-body shadow-lg p-3 bg-body-tertiary rounded">
+                    <h6 class="text-end"> <a href="/register">Register</a></h6>
+                    <h1 class="card-title mx-3 mb-3">Log in</h1>
+                    <form action="/login" method="POST" class="validated-form" novalidate>
+                        <div class="form-group mx-3 mb-3">
+                            <label for="username" class="form-label"> Username </label>
+                            <input type="text" name="username" id="username" class="form-control" required>
+                            <div class="valid-feedback">
+                                Looks Good!
+                            </div>
                         </div>
-                    </div>
-                    <div class="mx-3 mb-3">
-                        <label for="password" class="form-label"> Password </label>
-                        <input type="password" name="password" id="password" class="form-control" required>
-                        <div class="valid-feedback">
-                            Looks Good!
+                        <div class="form-group mx-3 mb-3">
+                            <label for="password" class="form-label"> Password </label>
+                            <input type="password" name="password" id="password" class="form-control" required>
+                            <div class="valid-feedback">
+                                Looks Good!
+                            </div>
                         </div>
-                    </div>
-                    <button class="btn btn-success mx-3 mb-3 shadow-lg rounded-pill">Login</button>
-                </form>
+                        <button class="btn btn-success mx-3 mb-3 shadow-lg rounded-pill">Login</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 </div>
