--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,32 +1,36 @@
 <% layout('layouts/plate')%>
-<div class="container-md col-6">
-    <div class="card">
-        <div class="card-body shadow-lg p-3 bg-body-tertiary rounded">
-            <h1 class="card-title mx-3 mb-3">Register</h1>
-            <form action="/register" method="POST" class="validated-form" novalidate>
-                <div class="mb-3 mx-3">
-                    <label for="username" class="form-label"> Username </label>
-                    <input type="text" name="username" id="username" class="form-control" required>
-                    <div class="valid-feedback">
-                        Looks Good!
-                    </div>
+<div class="container-md">
+    <div class="row justify-content-center">
+        <div class="col-lg-6">
+            <div class="card">
+                <div class="card-body shadow-lg p-3 bg-body-tertiary rounded">
+                    <h1 class="card-title mx-3 mb-3">Register</h1>
+                    <form action="/register" method="POST" class="validated-form" novalidate>
+                        <div class="form-group mb-3 mx-3">
+                            <label for="username" class="form-label"> Username </label>
+                            <input type="text" name="username" id="username" class="form-control" required>
+                            <div class="valid-feedback">
+                                Looks Good!
+                            </div>
+                        </div>
+                        <div class="form-group mb-3 mx-3">
+                            <label for="email" class="form-label"> Email </label>
+                            <input type="email" name="email" id="email" class="form-control" required>
+                            <div class="valid-feedback">
+                                Looks Good!
+                            </div>
+                        </div>
+                        <div class="form-group mb-3 mx-3">
+                            <label for="password" class="form-label"> Password </label>
+                            <input type="password" name="password" id="password" class="form-control" required>
+                            <div class="valid-feedback">
+                                Looks Good!
+                            </div>
+                        </div>
+                        <button class="btn btn-success mx-3 mb-3 shadow-lg rounded-pill">Register</button>
+                    </form>
                 </div>
-                <div class="mb-3 mx-3">
-                    <label for="email" class="form-label"> Email </label>
-                    <input type="email" name="email" id="email" class="form-control" required>
-                    <div class="valid-feedback">
-                        Looks Good!
-                    </div>
-                </div>
-                <div class="mb-3 mx-3">
-                    <label for="password" class="form-label"> Password </label>
-                    <input type="password" name="password" id="password" class="form-control" required>
-                    <div class="valid-feedback">
-                        Looks Good!
-                    </div>
-                </div>
-                <button class="btn btn-success mx-3 mb-3 shadow-lg rounded-pill">Register</button>
-            </form>
+            </div>
         </div>
     </div>
 </div>
