--- a/views/surveys/surveyShow.ejs
+++ b/views/surveys/surveyShow.ejs
@@ -62,7 +62,7 @@
                     </div>
                 <% } %>
             <div class="container mb-3">
-                <button class="btn btn-success mu-2" id="surveySubmitBtn" >Sumbit</button>
+                <button class="btn btn-success mu-2" id="surveySubmitBtn" >Submit</button>
             </div>
         </form>
         <div class="container mb-3">
